Bug 1931863 - V2: Fix [tsan] perma comm/mailnews/base/test/unit/test_folderCompact2.js | ThreadSanitizer: data race /builds/worker/workspace/obj-build/dist/include/nsTArray.h:397:37 in Length. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D232448

--HG--
extra : rebase_source : 7ae64ddcc2d2138833bb6d7bf9fa6611c8be9407